<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/toolbar"
            layout="@layout/login_toolbar"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_colour_light">


        <EditText
                android:id="@+id/login_activity_username_field"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:padding="10dip"
                android:gravity="center"
                android:hint="@string/username"/>

        <EditText
                android:id="@+id/login_password_field"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_activity_username_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"
                android:padding="10dip"
                android:gravity="center"
                android:hint="@string/password"/>

        <Button
                android:id="@+id/login_button"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/login"/>

        <Button
                android:id="@+id/lurk_button"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/lurk"/>

        <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyleInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/spinner"
                android:visibility="invisible">
        </ProgressBar>

    </RelativeLayout>
</LinearLayout>